--- a/about.html
+++ b/about.html
@@ -239,9 +239,9 @@
           </h3>
           <div class="carousel-milestone owl-theme">
             <div class="item">
-                <div class="row">
+                <div class="row mt-lg-3">
                   <div class="col-lg-3">
-                    <h2 class="text-white title-year d-none d-lg-block my-lg-3">
+                    <h2 class="text-white title-year d-none d-lg-block mb-lg-3">
                       2011
                     </h2>
                     <h1 class="text-white title-year d-lg-none">
@@ -259,9 +259,9 @@
                 </div>
             </div>
             <div class="item">
-              <div class="row">
+              <div class="row mt-lg-3">
                 <div class="col-lg-3">
-                  <h2 class="text-white title-year d-none d-lg-block my-lg-3">
+                  <h2 class="text-white title-year d-none d-lg-block mb-lg-3">
                     2011
                   </h2>
                   <h1 class="text-white title-year d-lg-none">
@@ -270,30 +270,26 @@
                 </div>
                 <div class="col-lg-9">
                   <p class="text-white details">
-                    Tahun 2011 Ansaf mulai masuk ke sektor pertambangan melalui proses
-                    jual beli batubara (coal trading).  Serangkaian sandungan dalam proses ini
-                    justru mendorong Pendiri untuk masuk ke kegiatan langsung dalam
-                    penambangan batubara.
+                    Sejarah Ansaf dimulai pada 22 juli 2011, dimana Bp. Syadli Awad Umar, Taufik Alkatiri dan Abdul Baru Alkatiri bersepakat mendirikan perusahaan yang diberinama Ansaf Inti Resources.
+                    <br><br>
+                    Pada awal berdirinya, ansaf berfokus sebagai coal trading company. Ansaf menjadi mitra dalam jual beli batubara bagi perusahaan dengan berbagai jenis batubara yang ada. Dengan tetap berupaya memperhatikan kebutuhan pasar, Ansaf menunjukan komitmen mampu berkembang meskipun beberapa tahun berikutnya industry batubara mengalami kelesuan dengan tetap berupaya memenuhi beberapa kebutuhan baik bagi kebutuhan domestic maupun ekspor.
                   </p>
                 </div>
               </div>
           </div>
           <div class="item">
-            <div class="row">
+            <div class="row mt-lg-3">
               <div class="col-lg-3">
-                <h2 class="text-white title-year d-none d-lg-block my-lg-3">
-                  2011
+                <h2 class="text-white title-year d-none d-lg-block mb-lg-3">
+                  2013
                 </h2>
                 <h1 class="text-white title-year d-lg-none">
-                  2011
+                  2013
                 </h1>
               </div>
               <div class="col-lg-9">
                 <p class="text-white details">
-                  Tahun 2011 Ansaf mulai masuk ke sektor pertambangan melalui proses
-                  jual beli batubara (coal trading).  Serangkaian sandungan dalam proses ini
-                  justru mendorong Pendiri untuk masuk ke kegiatan langsung dalam
-                  penambangan batubara.
+                  Ansaf mulai membuat komunikasi rencana pekerjaan dengan PT Insani Baraperkasa (IBP). Langkah yang pertama dalam pengembangan rencana batubara adalah pengurusan ijin usaha jasa pertambangan ke Dinas ESDM Provinsi Kalimantan Timur.
                 </p>
               </div>
             </div>
