--- a/business-services.html
+++ b/business-services.html
@@ -263,17 +263,10 @@
                     <h2 class="text-dark-blue mb-lg-4">
                       Kegiatan Usaha
                     </h2>
-                    <p class="text-dark-blue font-roboto d-none d-lg-block">
-                      Memulai usahanya sebagai perusahaan yang bergerak di coal trading<br>
-                      company. PT Ansaf memiliki beberapa services antara lain: Mining<br>
-                      Development, Overburden Removal, Coal Getting, dan Coal Hauling.<br>
-                    </p>
-                    <p class="text-dark-blue font-roboto d-lg-none mt-4 mb-5">
-                      Memulai usahanya sebagai perusahaan yang<br>
-                      bergerak di coal trading company. PT Ansaf<br>
-                      memiliki beberapa services antara lain: Mining<br>
-                      Development, Overburden Removal, Coal<br>
-                      Getting, dan CoalHauling.
+                    <p class="text-dark-blue font-roboto details">
+                      Memulai usahanya sebagai perusahaan yang bergerak di coal trading
+                      company. PT Ansaf memiliki beberapa services antara lain: Mining
+                      Development, Overburden Removal, Coal Getting, dan Coal Hauling.
                     </p>
                 </div>
               </div>
@@ -289,18 +282,11 @@
               <h4 class="text-white">
                 Overburden Removal 
               </h4>
-              <p class="text-white d-none d-lg-block">
-                Pengelolaan dalam pemindahan tanah penutup<br>
-                dikerjakan mengikuti perencanaan yang matang<br>
-                untuk menciptakan penambangan yang ramah<br>
+              <p class="text-white details pt-lg-3 pt-2">
+                Pengelolaan dalam pemindahan tanah penutup
+                dikerjakan mengikuti perencanaan yang matang
+                untuk menciptakan penambangan yang ramah
                 lingkungan.
-              </p>
-              <p class="text-white d-lg-none">
-                Pengelolaan dalam pemindahan tanah<br>
-                penutup dikerjakan mengikuti<br>
-                perencanaan yang matang untuk<br>
-                menciptakan penambangan yang<br>
-                ramah lingkungan.
               </p>
             </div>
           </div>
@@ -314,15 +300,10 @@
               <h4 class="text-white">
                 Coal Hauling  
               </h4>
-              <p class="text-white d-none d-lg-block">
-                Pengangkutan dilakukan secara efisien agar dapat<br>
-                menyediakan batubara sesuai target yang<br>
+              <p class="text-white details pt-lg-3 pt-2">
+                Pengangkutan dilakukan secara efisien agar dapat
+                menyediakan batubara sesuai target yang
                 dibutuhkan.
-              </p>
-              <p class="text-white d-lg-none">
-                Pengangkutan dilakukan secara efisien<br>
-                agar dapat menyediakan batubara sesuai<br>
-                target yang dibutuhkan.
               </p>
             </div>
           </div>
@@ -336,20 +317,15 @@
             </div>
             <div class="col-lg-12 content">
               <h4 class="text-white">
-                Overburden Removal 
+                Mining Development 
               </h4>
-              <p class="text-white d-none d-lg-block">
-                Pengelolaan dalam pemindahan tanah penutup<br>
-                dikerjakan mengikuti perencanaan yang matang<br>
-                untuk menciptakan penambangan yang ramah<br>
-                lingkungan.
-              </p>
-              <p class="text-white d-lg-none">
-                Pengelolaan dalam pemindahan tanah<br>
-                penutup dikerjakan mengikuti<br>
-                perencanaan yang matang untuk<br>
-                menciptakan penambangan yang<br>
-                ramah lingkungan.
+              <p class="text-white details pt-lg-3 pt-2">
+                Merupakan bentuk dukungan penuh agar tercipta
+                hasil produksi yang optimal dan kerjasama yang
+                saling menguntungkan kami mempersiapkan
+                perencanaan pemodelan geology dan design (Life Of
+                Mine), serta pengaturan rencana produksi jangka
+                panjang  dan jangka pendek kepada client.
               </p>
             </div>
           </div>
@@ -361,17 +337,12 @@
             </div>
             <div class="col-lg-12 content">
               <h4 class="text-white">
-                Coal Hauling  
+                Coal Getting  
               </h4>
-              <p class="text-white d-none d-lg-block">
-                Pengangkutan dilakukan secara efisien agar dapat<br>
-                menyediakan batubara sesuai target yang<br>
-                dibutuhkan.
-              </p>
-              <p class="text-white d-lg-none">
-                Pengangkutan dilakukan secara efisien<br>
-                agar dapat menyediakan batubara sesuai<br>
-                target yang dibutuhkan.
+              <p class="text-white details pt-lg-3 pt-2">
+                Pengambilan batubara dikerjakan sepenuh hati agar
+                tercipta hasil yang maksimal dan kualitas yang
+                terjaga dengan baik.
               </p>
             </div>
           </div>
