--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                                         </h1>
                                         <p class="text-white">
                                             Ansaf sangat tepat menjadi<br>
-                                            mitra karena memerikan solusi<br>
+                                            mitra karena memberikan solusi<br>
                                             yang dibutuhkan klien
                                         </p>
                                     </div>
@@ -225,7 +225,7 @@
                                         </h1>
                                         <p class="text-white my-4">
                                             Ansaf sangat tepat menjadi<br>
-                                            mitra karena memerikan solusi<br>
+                                            mitra karena memberikan solusi<br>
                                             yang dibutuhkan klien
                                         </p>
                                     </div>
@@ -255,7 +255,7 @@
                                         </h1>
                                         <p class="text-white">
                                             Ansaf sangat tepat menjadi<br>
-                                            mitra karena memerikan solusi<br>
+                                            mitra karena memberikan solusi<br>
                                             yang dibutuhkan klien
                                         </p>
                                     </div>
@@ -274,7 +274,7 @@
                                         </h1>
                                         <p class="text-white my-4">
                                             Ansaf sangat tepat menjadi<br>
-                                            mitra karena memerikan solusi<br>
+                                            mitra karena memberikan solusi<br>
                                             yang dibutuhkan klien
                                         </p>
                                     </div>
@@ -304,7 +304,7 @@
                                         </h1>
                                         <p class="text-white">
                                             Ansaf sangat tepat menjadi<br>
-                                            mitra karena memerikan solusi<br>
+                                            mitra karena memberikan solusi<br>
                                             yang dibutuhkan klien
                                         </p>
                                     </div>
@@ -323,7 +323,7 @@
                                         </h1>
                                         <p class="text-white my-4">
                                             Ansaf sangat tepat menjadi<br>
-                                            mitra karena memerikan solusi<br>
+                                            mitra karena memberikan solusi<br>
                                             yang dibutuhkan klien
                                         </p>
                                     </div>
@@ -353,7 +353,7 @@
                                         </h1>
                                         <p class="text-white">
                                             Ansaf sangat tepat menjadi<br>
-                                            mitra karena memerikan solusi<br>
+                                            mitra karena memberikan solusi<br>
                                             yang dibutuhkan klien
                                         </p>
                                     </div>
@@ -372,7 +372,7 @@
                                         </h1>
                                         <p class="text-white my-4">
                                             Ansaf sangat tepat menjadi<br>
-                                            mitra karena memerikan solusi<br>
+                                            mitra karena memberikan solusi<br>
                                             yang dibutuhkan klien
                                         </p>
                                     </div>
@@ -402,7 +402,7 @@
                                         </h1>
                                         <p class="text-white">
                                             Ansaf sangat tepat menjadi<br>
-                                            mitra karena memerikan solusi<br>
+                                            mitra karena memberikan solusi<br>
                                             yang dibutuhkan klien
                                         </p>
                                     </div>
@@ -421,7 +421,7 @@
                                         </h1>
                                         <p class="text-white my-4">
                                             Ansaf sangat tepat menjadi<br>
-                                            mitra karena memerikan solusi<br>
+                                            mitra karena memberikan solusi<br>
                                             yang dibutuhkan klien
                                         </p>
                                     </div>
