--- a/prev-projects.html
+++ b/prev-projects.html
@@ -248,123 +248,67 @@
         </div>
       </div>
       <div class="row my-lg-5 mx-lg-5 font-roboto details d-none d-lg-flex" data-aos="fade-up">
-        <div class="col-lg-6 px-lg-0">
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lokasi
+                  PT Insani Bara Perkasa<br>
+                  (Rain Group Tbk)<br>
+                  Tahun: 2016<br>
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
-                <div class="col-lg-4">
-                  Lokasi
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                        Perangat, Kutai Kartanegara,<br> 
+                        East Kalimantan
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batubara -<br> 
+                      Peningkatan Jalan <br>
+                      Pengangkutan Batubara<br>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lokasi
+                  PT Insani Bara Perkasa<br>
+                  (Rain Group Tbk)<br>
+                  Tahun: 2016<br>
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
-                <div class="col-lg-4">
-                  Lokasi
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Separi, Kutai Kartanegara,
+                      East Kalimantan
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batubara
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -403,8 +347,8 @@
           </div>
           <div class="row mb-lg-4">
             <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
+              PT Multi Harapan Utama<br>
+              (Tbk)<br>
               Tahun: 2016<br>
             </div>
             <div class="col-lg-8">
@@ -414,8 +358,8 @@
                 </div>
                 <span>:</span>
                 <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
+                  Loa Kulu, Kutai Kartanegara,<br> 
+                  East Kalimantan
                 </div>
               </div>
               <div class="row">
@@ -433,9 +377,9 @@
           </div>
           <div class="row mb-lg-4">
             <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
+              PT Mulia Persada<br>
+              Kertanegara<br>
+              Tahun: 2017
             </div>
             <div class="col-lg-8">
               <div class="row">
@@ -444,8 +388,7 @@
                 </div>
                 <span>:</span>
                 <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
+                  Marangkayu, East Kalimantan
                 </div>
               </div>
               <div class="row">
@@ -454,13 +397,41 @@
                 </div>
                 <span>:</span>
                 <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
+                  Pertambangan Batubara
                 </div>
               </div>
             </div>
           </div>
+          <div class="row mb-lg-4">
+            <div class="col-lg-4">
+              PT Kumala Sakti<br>
+              Permai<br>
+              Tahun: 2018
+            </div>
+            <div class="col-lg-8">
+              <div class="row">
+                <div class="col-lg-4">
+                  Lokasi
+                </div>
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Senoni, Kutai Kartanegara,<br>
+                  East Kalimantan
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-4">
+                  Lingkup Pekerjaan
+                </div>
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 px-lg-0">
           <div class="row mb-lg-4">
             <div class="col-lg-4">
               PT Insani Bara Perkasa<br>
@@ -474,8 +445,8 @@
                 </div>
                 <span>:</span>
                 <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
+                  Separi, Kutai Kartanegara,
+                  East Kalimantan
                 </div>
               </div>
               <div class="row">
@@ -484,9 +455,90 @@
                 </div>
                 <span>:</span>
                 <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
+                  Pertambangan Batubara
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row mb-lg-4">
+            <div class="col-lg-4">
+              PT Insani Bara Perkasa<br>
+              (Rain Group Tbk)<br>
+              Tahun: 2017<br>
+            </div>
+            <div class="col-lg-8">
+              <div class="row">
+                <div class="col-lg-4">
+                  Lokasi
+                </div>
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Palaran, Kutai Kartanegara,<br>
+                  East Kalimantan
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-4">
+                  Lingkup Pekerjaan
+                </div>
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row mb-lg-4">
+            <div class="col-lg-4">
+              PT Insani Bara Perkasa<br>
+              (Rain Group Tbk)<br>
+              Tahun: 2018<br>
+            </div>
+            <div class="col-lg-8">
+              <div class="row">
+                <div class="col-lg-4">
+                  Lokasi
+                </div>
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Purwajaya, Kutai Kartanegara,<br>
+                  East Kalimantan
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-4">
+                  Lingkup Pekerjaan
+                </div>
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row mb-lg-4">
+            <div class="col-lg-4">
+              CV Kutai Kumala Energi<br>
+              Tahun: 2018
+            </div>
+            <div class="col-lg-8">
+              <div class="row">
+                <div class="col-lg-4">
+                  Lokasi
+                </div>
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Loa Kulu, Kutai Kartanegara,<br>
+                  East Kalimantan
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-4">
+                  Lingkup Pekerjaan
+                </div>
+                <span>:</span>
+                <div class="col-lg-6 pl-lg-1">
+                  Pertambangan Batubara
                 </div>
               </div>
             </div>
