--- a/about.html
+++ b/about.html
@@ -250,10 +250,7 @@
                   </div>
                   <div class="col-lg-9">
                     <p class="text-white details">
-                      Tahun 2011 Ansaf mulai masuk ke sektor pertambangan melalui proses
-                      jual beli batubara (coal trading).  Serangkaian sandungan dalam proses ini
-                      justru mendorong Pendiri untuk masuk ke kegiatan langsung dalam
-                      penambangan batubara.
+                      Tahun 2011 Ansaf mulai masuk ke sektor pertambangan melalui proses jual beli batubara (coal trading). Serangkaian sandungan dalam proses ini justru mendorong Pendiri untuk masuk ke kegiatan langsung dalam penambangan batubara.
                     </p>
                   </div>
                 </div>
@@ -262,38 +259,53 @@
               <div class="row mt-lg-3">
                 <div class="col-lg-3">
                   <h2 class="text-white title-year d-none d-lg-block mb-lg-3">
-                    2011
+                    2013
                   </h2>
                   <h1 class="text-white title-year d-lg-none">
-                    2011
+                    2013
                   </h1>
                 </div>
                 <div class="col-lg-9">
                   <p class="text-white details">
-                    Sejarah Ansaf dimulai pada 22 juli 2011, dimana Bp. Syadli Awad Umar, Taufik Alkatiri dan Abdul Baru Alkatiri bersepakat mendirikan perusahaan yang diberinama Ansaf Inti Resources.
-                    <br><br>
-                    Pada awal berdirinya, ansaf berfokus sebagai coal trading company. Ansaf menjadi mitra dalam jual beli batubara bagi perusahaan dengan berbagai jenis batubara yang ada. Dengan tetap berupaya memperhatikan kebutuhan pasar, Ansaf menunjukan komitmen mampu berkembang meskipun beberapa tahun berikutnya industry batubara mengalami kelesuan dengan tetap berupaya memenuhi beberapa kebutuhan baik bagi kebutuhan domestic maupun ekspor.
+                    Tahun 2013 Ansaf mendapat kesempatan menjadi salah satu mining contractor di PT Insani Baraperkasa (IBP) di Kutai Kartanegara. Ansaf mengelola kepercayaan ini dengan komitmen yang kuat sehingga mampu mencapai produktifitas yang optimal, dibalik berbagai hambatan dan keterbatasan.
                   </p>
                 </div>
               </div>
-          </div>
-          <div class="item">
-            <div class="row mt-lg-3">
-              <div class="col-lg-3">
-                <h2 class="text-white title-year d-none d-lg-block mb-lg-3">
-                  2013
-                </h2>
-                <h1 class="text-white title-year d-lg-none">
-                  2013
-                </h1>
-              </div>
-              <div class="col-lg-9">
-                <p class="text-white details">
-                  Ansaf mulai membuat komunikasi rencana pekerjaan dengan PT Insani Baraperkasa (IBP). Langkah yang pertama dalam pengembangan rencana batubara adalah pengurusan ijin usaha jasa pertambangan ke Dinas ESDM Provinsi Kalimantan Timur.
-                </p>
+            </div>
+            <div class="item">
+              <div class="row mt-lg-3">
+                <div class="col-lg-3">
+                  <h2 class="text-white title-year d-none d-lg-block mb-lg-3">
+                    2016
+                  </h2>
+                  <h1 class="text-white title-year d-lg-none">
+                    2016
+                  </h1>
+                </div>
+                <div class="col-lg-9">
+                  <p class="text-white details">
+                    Upaya tak kenal lelah dan kerja keras Ansaf membuahkan peluang baru sebagai mining contractor di perusahaan tambang lainnya. Pengalaman dari kegiatan penambangan ini memberi pelajaran kepada Ansaf tentang nilai-nilai kejujuran (integrity) dan kesetiaan (loyalty) serta perlunya kehati-hatian (prudence) yang sejatinya hadir dalam setiap kerjasama.
+                  </p>
+                </div>
               </div>
             </div>
-        </div>
+            <div class="item">
+              <div class="row mt-lg-3">
+                <div class="col-lg-3">
+                  <h2 class="text-white title-year d-none d-lg-block mb-lg-3">
+                    2019
+                  </h2>
+                  <h1 class="text-white title-year d-lg-none">
+                    2019
+                  </h1>
+                </div>
+                <div class="col-lg-9">
+                  <p class="text-white details">
+                    Kini Ansaf siap mengembangkan perusahaan melalui penyempurnaan sistim, peningkatan kompetensi SDM dan memperkuat peralatan produksi agar mampu beroperasi lebih produktif dan menghasilkan produksi yang optimal.
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <img class="move-right guy d-none d-lg-block" src="images/about-content-guy-05.png" alt="">
