--- a/existing-projects.html
+++ b/existing-projects.html
@@ -223,8 +223,8 @@
             Timur dan Sumatra Selatan
           </p>
         </div>
-        <div class="col-lg-7 pr-lg-0 order-lg-2 order-1 px-0" data-aos="fade-up">
-          <img class="img-content d-none d-lg-block" src="images/exi-projects-mid-section-content-02.png" alt="">
+        <div class="col-lg-6 offset-lg-1 pr-lg-0 order-lg-2 order-1 px-0" data-aos="fade-up">
+          <img class="img-content img-fluid d-none d-lg-block" src="images/exi-projects-mid-section-content-02.png" alt="">
           <img class="img-content d-lg-none" src="images/exi-projects-mid-section-content-mobile-25.jpg" alt="">
         </div>
       </div>
