--- a/prev-projects.html
+++ b/prev-projects.html
@@ -216,7 +216,7 @@
           <h2 class="text-orange font-50">
             “
           </h2>
-          <p class="text-white brief">
+          <p class="text-white brief font-titillium-italic">
             Semenjak berdirinya ditahun 2014, PT Ansaf telah dipercaya
             untuk melakukan pekerjaan penambangan dan pengembangan
             infrastruktur di beberapa perusahaan di Kalimantan Timur
@@ -312,233 +312,183 @@
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="col-lg-6 px-lg-0">
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lokasi
+                  PT Multi Harapan Utama<br>
+                  (Tbk)<br>
+                  Tahun: 2016<br>
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Multi Harapan Utama<br>
-              (Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
-                <div class="col-lg-4">
-                  Lokasi
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Loa Kulu, Kutai Kartanegara,<br> 
-                  East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Loa Kulu, Kutai Kartanegara,<br> 
+                      East Kalimantan
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batubara -<br> 
+                      Peningkatan Jalan <br>
+                      Pengangkutan Batubara<br>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Mulia Persada<br>
-              Kertanegara<br>
-              Tahun: 2017
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lokasi
+                  PT Insani Bara Perkasa<br>
+                  (Rain Group Tbk)<br>
+                  Tahun: 2017<br>
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Marangkayu, East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Kumala Sakti<br>
-              Permai<br>
-              Tahun: 2018
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
-                <div class="col-lg-4">
-                  Lokasi
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Senoni, Kutai Kartanegara,<br>
-                  East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Palaran, Kutai Kartanegara,<br>
+                      East Kalimantan
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batubara
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="col-lg-6 px-lg-0">
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lokasi
+                  PT Mulia Persada<br>
+                  Kertanegara<br>
+                  Tahun: 2017
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Separi, Kutai Kartanegara,
-                  East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2017<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
-                <div class="col-lg-4">
-                  Lokasi
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Palaran, Kutai Kartanegara,<br>
-                  East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Marangkayu, East Kalimantan
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batubara
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2018<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lokasi
+                  PT Insani Bara Perkasa<br>
+                  (Rain Group Tbk)<br>
+                  Tahun: 2018<br>
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Purwajaya, Kutai Kartanegara,<br>
-                  East Kalimantan
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Purwajaya, Kutai Kartanegara,<br>
+                      East Kalimantan
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batubara
+                    </div>
+                  </div>
                 </div>
               </div>
-              <div class="row">
+            </div>
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lingkup Pekerjaan
+                  PT Kumala Sakti<br>
+                  Permai<br>
+                  Tahun: 2018
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Senoni, Kutai Kartanegara,<br>
+                      East Kalimantan
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batubara
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              CV Kutai Kumala Energi<br>
-              Tahun: 2018
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lokasi
+                  CV Kutai Kumala Energi<br>
+                  Tahun: 2018
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Loa Kulu, Kutai Kartanegara,<br>
-                  East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Loa Kulu, Kutai Kartanegara,<br>
+                      East Kalimantan
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batubara
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -583,6 +533,38 @@
           <div class="item">
             <div class="col-lg-12 px-0">
               <h6 class="font-titillium-bold">
+                PT Mulia Persada Kertanegara<br>
+                Tahun: 2017<br>
+              </h6>
+              <br>
+              <p>
+                Lokasi:<br>
+                Marangkayu, East Kalimantan<br>
+                <br>
+                Lingkup Pekerjaan:<br>
+                Pertambangan Batubara<br>
+              </p>
+              <br><br><br>
+              <h6 class="font-titillium-bold">
+                PT Kumala Sakti Permai<br>
+                Tahun: 2018<br>
+              </h6>
+              <br>
+              <p>
+                Lokasi:<br>
+                Senoni, Kutai Kartanegara,
+                East Kalimantan<br>
+                <br>
+                Lingkup Pekerjaan:<br>
+                Pertambangan Batubara
+              </p>
+            </div>
+            <hr class="d-lg-none mt-4 mb-5"> 
+            <h6 class="text-right my-5">2/4</h6>
+          </div>
+          <div class="item">
+            <div class="col-lg-12 px-0">
+              <h6 class="font-titillium-bold">
                 PT Insani Bara Perkasa (Rain Group Tbk)<br>
                 Tahun: 2016<br>
               </h6>
@@ -592,13 +574,44 @@
                 Perangat, Kutai Kartanegara, East Kalimantan<br>
                 <br>
                 Lingkup Pekerjaan:<br>
-                Pertambangan Batubara - Peningkatan Jalan<br>
-                Pengangkutan Batubara<br>
+                Separi, Kutai Kartanegara, East Kalimantan<br>
               </p>
               <br><br><br>
               <h6 class="font-titillium-bold">
-                PT Multi Harapan Utama (Tbk)<br>
-                Tahun: 2016<br>
+                PT Insani Bara Perkasa (Rain Group Tbk)<br>
+                Tahun: 2017<br>
+              </h6>
+              <br>
+              <p>
+                Lokasi:<br>
+                Palaran, Kutai Kartanegara,
+                East Kalimantan<br>
+                <br>
+                Lingkup Pekerjaan:<br>
+                Pertambangan Batubara<br>
+              </p>
+            </div>
+            <hr class="d-lg-none mt-4 mb-5"> 
+            <h6 class="text-right my-5">3/4</h6>
+          </div>
+          <div class="item">
+            <div class="col-lg-12 px-0">
+              <h6 class="font-titillium-bold">
+                PT Insani Bara Perkasa (Rain Group Tbk)<br>
+                Tahun: 2018<br>
+              </h6>
+              <br>
+              <p>
+                Lokasi:<br>
+                Purwajaya, Kutai Kartanegara, East Kalimantan<br>
+                <br>
+                Lingkup Pekerjaan:<br>
+                Pertambangan Batubara<br>
+              </p>
+              <br><br><br>
+              <h6 class="font-titillium-bold">
+                CV Kutai Kumala Energi<br>
+                Tahun: 2018<br>
               </h6>
               <br>
               <p>
@@ -606,12 +619,11 @@
                 Loa Kulu, Kutai Kartanegara, East Kalimantan<br>
                 <br>
                 Lingkup Pekerjaan:<br>
-                Pertambangan Batubara - Peningkatan Jalan<br>
-                Pengangkutan Batubara<br>
+                Pertambangan Batubara
               </p>
             </div>
             <hr class="d-lg-none mt-4 mb-5"> 
-            <h6 class="text-right my-5">2/4</h6>
+            <h6 class="text-right my-5">4/4</h6>
           </div>
         </div>
       </div>
