--- a/prospective-projects.html
+++ b/prospective-projects.html
@@ -220,7 +220,7 @@
           <h2 class="text-orange font-50">
             “
           </h2>
-          <p class="text-white">
+          <p class="text-white font-titillium-italic">
             Dengan kemampuan dan komitmen, PT Ansaf berupaya<br>
             untuk terus melakukan pekerjaan penambangan dan<br>
             pengembangan infrastruktur. 
